force-app/main/default/objects/opa_candidate_log__c/opa_candidate_log__c.object-meta.xml
<CustomObject>
    <label>opa_candidate_log</label>
    <nameField>
        <label>opa_candidate_log</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>opa_candidate_logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>