force-app/main/default/objects/opa_candidate_log__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>opa_candidate_logs</relationshipLabel>
    <relationshipName>opa_candidate_logs</relationshipName>
    <type>Lookup</type>
</CustomField>