force-app/main/default/objects/opa_candidate_log__c/fields/isEmailSame__c.field-meta.xml
<CustomField>
    <fullName>isEmailSame__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isEmailSame</label>
    <type>Checkbox</type>
</CustomField>