force-app/main/default/objects/opa_candidate_log__c/fields/modified__c.field-meta.xml
<CustomField>
    <fullName>modified__c</fullName>
    <label>modified</label>
    <length>255</length>
    <type>Text</type>
</CustomField>