force-app/main/default/objects/opa_candidate_log__c/fields/overall_type__c.field-meta.xml
<CustomField>
    <fullName>overall_type__c</fullName>
    <label>overall_type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>