force-app/main/default/objects/opa_candidate_log__c/fields/process_type__c.field-meta.xml
<CustomField>
    <fullName>process_type__c</fullName>
    <label>process_type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>