force-app/main/default/objects/opa_candidate_log__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>id__c</columns>
    <columns>user_id__c</columns>
    <columns>overall_type__c</columns>
    <columns>process_type__c</columns>
    <columns>ref_type__c</columns>
    <columns>ref_type_id__c</columns>
    <columns>text__c</columns>
    <columns>person_id__c</columns>
    <columns>email__c</columns>
    <columns>company_id__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>